--- a/fahrenheit.html
+++ b/fahrenheit.html
@@ -12,10 +12,13 @@
       <a href="./home.html"> Home</a>
       <a href="./celcius.html">Celcius to Fahrenheit</a>
     </nav>
-    <p>Fahrenheit: <input type="number" id="fahField" /></p>
-    <p><input type="button" id="convertBtnFah" value="Convert To:" /></p>
-    <p>Celcius: <input type="number" id="celField" readonly /></p>
+    <form id="form">
+      <p>Fahrenheit: <input type="number" id="fahField" /></p>
+      <p><input type="button" id="convertBtnFah" value="Convert To:" /></p>
+      <p>Celcius: <input type="number" id="celField" readonly /></p>
+    </form>
     <p><input type="reset" id="resetBtn" /></p>
-    <script src="scripts/converterfah.js"></script>
+
+    <script src="scripts/converter.js"></script>
   </body>
 </html>
